feat(documents): modele DEVIS_PRESTATAIRE, distinct du devis prospect
Un devis d'intervention se rendait avec le modele DEVIS — un devis PROSPECT,
fait de forfaits, d'abonnement et de PMS. Il echouait sur ${devis.forfait}, et
n'aurait de toute facon rendu que des cases vides.

Quatre causes distinctes, trouvees l'une apres l'autre :

1. Le modele SEME (devis-clenzy.odt) est generique — client, property,
   demande, ligne, nf. Ce sont les BUNDLES pousses par DocumentTemplateSyncService
   qui apportent les blocs prospect. DEVIS_PRESTATAIRE est donc seme depuis le
   squelette generique et n'a DELIBEREMENT aucun bundle.
2. Le seeder cherchait une organisation nommee « Clenzy » : apres le rebranding
   plus aucune ne s'appelait ainsi, et il etait devenu inerte EN SILENCE — pour
   les huit modeles, pas seulement le nouveau. Repli sur l'organisation qui
   porte deja des modeles.
3. Le modele itere `intervention.lignes`, pas un `ligne` de premier niveau : le
   detail affichait la description de l'INTERVENTION la ou le devis porte ses
   propres lignes. Substitution des lignes du devis.
4. Le total passait par un [#if]/[#else] eclate sur cinq <text:p>, dont la
   branche else ne rendait jamais. Remplace par la valeur.

Numerotation : un devis prestataire EST un devis — ajoute aux strategies France
et Maroc, prefixe DEV. PAS a l'Arabie saoudite, ou ZATCA Phase 1 ne numerote
que les factures : le code le documente, c'est une decision de conformite.

Les tags ${demande.*} sont fournis avec le montant DU DEVIS, pas l'estimation
de l'intervention : c'est le prestataire qui chiffre.

Verifie sur le PDF produit : DEV-2026-00002, ligne « Reparation d'urgence »
200,00 EUR, total 200,00 EUR, aucun bloc prospect.